src/pages/css/index.css
.index {
  position: relative;
  min-height: 100vh;
  background: black;
  padding-top: 3%;
  padding-right: 4%;
  padding-left: 4%;
  padding-bottom: 3%;
  color: white;
}

header {
  position: fixed;
  display: block;
  width: 92%;
}

header .date-row {
  font-family: 'Helvetica Neue', Helvetica;
  display: flex;
  justify-content: space-between;
  font-weight: 300;
}

header .title-row {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  transition: 1s all cubic-bezier(0.23, 1, 0.320, 1);
  cursor: crosshair;
}

header .title-row-temp {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  transition: 1s all cubic-bezier(0.23, 1, 0.320, 1);
  cursor: crosshair;
  animation-name: fadeout;
  animation-duration: 1s;
  animation-fill-mode: both;
}

header .title-row-temp:nth-child(3) {
  animation-delay: 2.7s;
}

header .title-row-temp:nth-child(4) {
  animation-delay: 2.6s;
}

header .title-row-temp:nth-child(5) {
  animation-delay: 2.5s;
}

header .title-row-temp:nth-child(6) {
  animation-delay: 2.4s;
}

header .title-row-temp:nth-child(7) {
  animation-delay: 2.3s;
}

header .title-row-temp:nth-child(8) {
  animation-delay: 2.2s;
}

.title-row h1 span {
  animation-name: delay-fadeout;
  animation-duration: 4s;
  opacity: 0;
}

.title-row:hover h1 span {
  transition: 1s all cubic-bezier(0.23, 1, 0.320, 1);
  opacity: 1;
}

.title-row h2 {
  animation: spin;
  animation-duration: 1.5s;
  animation-fill-mode: both;
  animation-delay: 0.9s;
  -webkit-text-stroke: 2px white;
  color: black;
}

.title-row .effrey {
  animation-name: delay-fadeout;
  animation-duration: 4s;
  opacity: 0;
  transition: 1s all cubic-bezier(0.23, 1, 0.320, 1);
}

.title-row:hover .effrey {
  opacity: 1;
}

.title-row .move-J {
  transition: transform .15s ease, -webkit-transform .15s ease;
}

.title-row:hover .move-J {
  transform: none;
}

.experience {
  margin-top: 11rem;
}

.experience-title {
  margin-bottom: 5em;
}

.experience-title #title-left {
  overflow: hidden;
  animation: left-right 10s ease-in-out infinite;
}

.experience-title #title-right {
  overflow: hidden;
  -webkit-text-stroke: 2px white;
  color: black;
  text-align: right;
  animation: right-left 10s ease-in-out infinite;
}

.title-row-temp h2 {
  animation-name: spin;
  animation-duration: 1.5s;
  animation-fill-mode: both;
  animation-delay: 0.9s;
}

span.move-J {
  display: inline-block;
  animation-name: movej;
  animation-duration: 4s;
  transform: translateX(6.65em);
}

small {
  font-size: 20%;
  line-height: 0;
  vertical-align: super;
}

sup {
  font-size: 20%;
}

h1,
h2,
h3 {
  font-size: 4.875rem;
  margin: 0;
  padding: 0;
}

h3 {
  font-family: 'Doublewide'
}

.intro {
  width: 100%;
  margin-top: 20%;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  animation-name: introtext;
  animation-duration: 1.5s;
  animation-fill-mode: both;
  animation-delay: 2.7s;
}

.intro-text {
  flex: 0 0 60%;
  max-width: 60%;
  font-size: 2rem;
  font-weight: 100;
  line-height: 1.4;
}

.footnotes {
  flex: 0 0 16.66667%;
  max-width: 16.66667%;
  margin-top: 10%;
  font-family: Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
  font-weight: 200;
  font-size: 13px;
}

.footnote {
  font-size: 50%;
  vertical-align: super;
}

.note {
  margin-bottom: 1rem;
}

.note span {
  font-weight: 300;
  margin-left: 10px;
  display: block;
  line-height: 1.4;
}

.experience {
  padding-bottom: 6em;
}

.experience .job-content {
  font-size: 1.5rem;
  width: 50%;
  margin-top: 4rem;
}

.job-content span {
  font-weight: bold;
  border: 1px solid white;
  padding: 4px;
  line-height: 2;
}

a {
  border: 1px solid white;
  padding: 4px;
  text-decoration: none;
  color: white;
}

/* a::after {
  content: '↗';
  font-size: 13px;
  margin-left: .1em;
  transition: color .5s ease, transform .5s .1s ease;

} */


a:hover {
  background: white;
  color: black;
}

@keyframes left-right {

  50% {
    -webkit-transform: translate3d(50%, 0, 0);
    transform: translate3d(50%, 0, 0);
  }

  100% {
    transform: none
  }
}

@keyframes right-left {
  50% {
    -webkit-transform: translate3d(-50%, 0, 0);
    transform: translate3d(-50%, 0, 0);
  }

  100% {
    transform: none;
  }
}

@keyframes movej {
  0% {
    transform: none;
  }

  80% {
    transform: none;
  }

  100% {
    transform: translateX(6.65em);
  }
}

@keyframes fadein {
  0% {
    opacity: 0
  }

  50% {
    opacity: 0
  }

  100% {
    opacity: 1
  }
}


@keyframes hover {
  0% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }

  50% {
    -webkit-transform: translateY(-4px);
    transform: translateY(-4px);
  }

  100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}

@keyframes fadeout {
  0% {
    opacity: 1;
    display: block;
  }

  100% {
    opacity: 0;
    display: none;
    visibility: hidden;
  }
}

@keyframes delay-fadeout {
  0% {
    opacity: 1;
    display: block;
  }

  80% {
    opacity: 1;
    display: block;
  }

  100% {
    opacity: 0;
    display: none;
    visibility: hidden;
  }
}

@keyframes introtext {
  0% {
    -webkit-transform: translate3D(0, 180%, 0);
    transform: translate3D(0, 180%, 0);
  }

  100% {
    -webkit-transform: translate3D(0, 0, 0);
    transform: translate3D(0, 0, 0);
  }
}

@keyframes spin {
  0% {
    -webkit-text-stroke: 2px #edeae3;
    -ms-text-stroke: 2px #edeae3;
    color:
      #020001;
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  25% {
    -webkit-text-stroke: none;
    -ms-text-stroke: none;
    color:
      #edeae3;
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
  }

  50% {
    -webkit-text-stroke: 2px #edeae3;
    color:
      #020001;
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
  }

  75% {
    -webkit-text-stroke: none;
    color:
      #edeae3;
    -webkit-transform: rotate(270deg);
    transform: rotate(270deg);
  }

  100% {
    -webkit-text-stroke: 2px #edeae3;
    color:
      #020001;
    -webkit-transform: rotate(1turn);
    transform: rotate(1turn);
  }
}

